--- a/TrackNZApp/src/main/res/layout/activity_main.xml
+++ b/TrackNZApp/src/main/res/layout/activity_main.xml
@@ -33,18 +33,23 @@
             android:layout_centerInParent="true"
             android:orientation="vertical"
             android:gravity="center_horizontal">
+
+            <ImageView
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:src="@drawable/nothing"
+                android:layout_marginBottom="30dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no_tracked_items"
                 android:gravity="center_horizontal"
-                android:textSize="18sp"
-                android:layout_marginBottom="10dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/instr_add"
-                android:gravity="center_horizontal" />
+                android:textSize="22sp"
+                android:layout_marginBottom="10dp"
+                android:focusableInTouchMode="true"
+                android:fontFamily="sans-serif-light"
+                android:textColor="#aaa" />
         </LinearLayout>
 
 
