--- a/TrackNZApp/src/main/res/layout/activity_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/activity_package_info.xml
@@ -1,49 +1,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="co.svbnet.tracknz.activity.PackageInfoActivity"
-    android:orientation="vertical"
-    android:background="@color/material_grey_50">
+    android:orientation="vertical">
 
     <include
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/toolbar" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@color/window_background">
+        auto:cardElevation="5dp"
+        auto:cardCornerRadius="4dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Detailed description"
-            android:id="@+id/detailed_description"
-            android:textSize="18sp"
-            android:layout_marginBottom="15dp" />
+            android:padding="10dp">
 
-        <TextView
-            tools:text="NZ Post"
-            android:fontFamily="sans-serif-light"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/source"
-            android:layout_marginBottom="20dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Detailed description"
+                android:id="@+id/detailed_description"
+                android:textSize="18sp"
+                android:layout_marginBottom="15dp" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:foreground="@drawable/bottom_shadow"
-        />
+                <TextView
+                    tools:text="NZ Post"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/source"
+                    android:layout_marginBottom="20dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <ListView
         tools:listitem="@layout/item_package_event"
