--- a/TrackNZApp/src/main/res/layout/activity_main.xml
+++ b/TrackNZApp/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             <ImageView
                 android:layout_width="180dp"
                 android:layout_height="180dp"
-                android:src="@drawable/nothing"
+                android:src="@drawable/ic_nothing"
                 android:layout_marginBottom="30dp" />
 
             <TextView
