--- a/TrackNZApp/src/main/res/layout/activity_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/activity_package_info.xml
@@ -25,13 +25,31 @@
             android:layout_height="wrap_content"
             android:padding="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Detailed description"
-                android:id="@+id/detailed_description"
-                android:textSize="18sp"
-                android:layout_marginBottom="15dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    tools:src="@drawable/ic_status_complete"
+                    tools:background="@drawable/tracking_status_icon_done"
+                    android:id="@+id/status_icon"
+                    android:padding="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Detailed description"
+                    android:id="@+id/detailed_description"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="15dp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -43,7 +61,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/source"
-                    android:layout_marginBottom="20dp" />
+                    android:layout_marginBottom="5dp"
+                    android:textSize="13sp"
+                    android:textColor="#777" />
+
+                <TextView
+                    tools:text="AA000111222NZ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/label"
+                    android:textSize="13sp"
+                    android:textColor="#777" />
             </LinearLayout>
 
         </LinearLayout>
