--- a/TrackNZApp/src/main/res/layout/activity_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/activity_package_info.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,30 +8,29 @@
 
     <include
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/toolbar" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        auto:cardElevation="5dp"
-        auto:cardCornerRadius="4dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_height="?attr/actionBarSize"
+        layout="@layout/toolbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/toolbar_layout" />
 
         <RelativeLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            tools:background="@color/primary"
+            android:id="@+id/info_layout"
+            android:paddingTop="20dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp"
+            android:layout_below="@+id/toolbar_layout">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 tools:src="@drawable/ic_status_complete"
-                tools:background="@drawable/tracking_status_icon_done"
                 android:id="@+id/status_icon"
-                android:padding="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"/>
 
@@ -42,8 +41,9 @@
                 android:id="@+id/detailed_description"
                 android:textSize="18sp"
                 android:layout_toRightOf="@+id/status_icon"
-                android:minHeight="40dp"
-                android:paddingBottom="5dp" />
+                android:textColor="@android:color/white"
+                android:gravity="center_vertical"
+                android:minHeight="60dp" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -51,7 +51,16 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/extras_layout"
                 android:layout_below="@+id/detailed_description"
-                android:layout_toRightOf="@+id/status_icon">
+                android:layout_marginTop="5dp"
+                android:gravity="end">
+
+                <TextView
+                    tools:text="AA000111222NZ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/label"
+                    android:textSize="13sp"
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     tools:text="NZ Post"
@@ -60,27 +69,59 @@
                     android:id="@+id/source"
                     android:layout_marginBottom="5dp"
                     android:textSize="13sp"
-                    android:textColor="#777" />
+                    android:textColor="@android:color/white" />
 
-                <TextView
-                    tools:text="AA000111222NZ"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/label"
-                    android:textSize="13sp"
-                    android:textColor="#777" />
             </LinearLayout>
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/bottom_shadow"
+        android:layout_below="@+id/info_layout" />
 
     <ListView
         tools:listitem="@layout/item_package_event"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/events_list"
-        android:divider="@null"
         android:dividerHeight="@null"
-        android:layout_marginTop="20dp" />
+        android:divider="@null"
+        android:clipToPadding="false"
+        android:layout_below="@+id/info_layout"
+        android:paddingTop="10dp" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:id="@+id/empty_events"
+        android:orientation="vertical"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/info_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/ic_nothing"
+            android:layout_marginBottom="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_events"
+            android:gravity="center_horizontal"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"
+            android:focusableInTouchMode="true"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#aaa" />
+    </LinearLayout>
+
+</RelativeLayout>
