--- a/TrackNZApp/src/main/res/layout/activity_main.xml
+++ b/TrackNZApp/src/main/res/layout/activity_main.xml
@@ -1,131 +1,24 @@
-<com.flipboard.bottomsheet.BottomSheetLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomsheet"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
         <include
             android:layout_width="fill_parent"
             android:layout_height="?attr/actionBarSize"
             layout="@layout/toolbar" />
 
-        <!-- Constrain toolbar to action bar size and render the shadow in the RelativeLayout so the
-        swipe indicator refresh renders over it -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <FrameLayout
-                android:id="@+id/fragmentContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:foreground="@drawable/bottom_shadow"
-                />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:id="@+id/empty_list_text"
-                android:layout_centerInParent="true"
-                android:orientation="vertical"
-                android:gravity="center_horizontal">
-
-                <ImageView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:src="@drawable/ic_nothing"
-                    android:layout_marginBottom="30dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/no_tracked_items"
-                    android:gravity="center_horizontal"
-                    android:textSize="22sp"
-                    android:layout_marginBottom="10dp"
-                    android:focusableInTouchMode="true"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="#aaa" />
-            </LinearLayout>
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="co.svbnet.tracknz.fragment.PackageListFragment"
+        android:id="@+id/list_fragment"
+        android:layout_gravity="center_horizontal"
+        tools:layout="@layout/fragment_package_list" />
 
 
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-                android:id="@+id/packages_container">
-                <ListView
-                    android:paddingTop="10dp"
-                    tools:visibility="invisible"
-                    android:choiceMode="multipleChoiceModal"
-                    android:id="@+id/packages"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:listitem="@layout/item_tracked_package"
-                    android:background="?android:attr/activatedBackgroundIndicator"
-                    android:dividerHeight="0dp"
-                    android:divider="@null" />
-            </android.support.v4.widget.SwipeRefreshLayout>
-
-            <com.getbase.floatingactionbutton.FloatingActionsMenu
-                android:id="@+id/add_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentStart="false"
-                android:layout_marginBottom="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:contentDescription="@string/btn_fab_add">
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab_new_from_clipboard"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:fab_colorNormal="@color/fab_actions_normal"
-                    app:fab_size="mini"
-                    app:fab_title="Action A"
-                    app:fab_icon="@drawable/ic_clipboard_text_grey600_24dp"
-                    app:fab_colorPressed="@color/fab_actions_pressed"/>
-
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab_scan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:fab_colorNormal="@color/fab_actions_normal"
-                    app:fab_title="Action B"
-                    app:fab_size="mini"
-                    app:fab_icon="@drawable/ic_barcode_grey600_24dp"
-                    app:fab_colorPressed="@color/fab_actions_pressed"/>
-
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fab_enter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:fab_colorNormal="@color/fab_actions_normal"
-                    app:fab_icon="@drawable/ic_pencil_grey600_24dp"
-                    app:fab_title="Action B"
-                    app:fab_size="mini"
-                    app:fab_colorPressed="@color/fab_actions_pressed"/>
-            </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
-        </RelativeLayout>
-
-
-
-
-
-    </LinearLayout>
-    </com.flipboard.bottomsheet.BottomSheetLayout>
+</LinearLayout>
