--- a/TrackNZApp/src/main/res/layout/fragment_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/fragment_package_info.xml
@@ -1,12 +1,119 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="co.svbnet.tracknz.fragment.PackageInfoFragment">
+    tools:context="co.svbnet.tracknz.activity.PackageInfoActivity"
+    android:orientation="vertical">
 
-    <include
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        layout="@layout/package_info" />
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:background="@color/primary"
+        android:id="@+id/info_layout"
+        android:paddingTop="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="20dp"
+        android:layout_below="@+id/toolbar_layout">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            tools:src="@drawable/ic_status_complete"
+            android:id="@+id/status_icon"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Detailed description"
+            android:id="@+id/detailed_description"
+            android:textSize="18sp"
+            android:layout_toRightOf="@+id/status_icon"
+            android:textColor="@android:color/white"
+            android:gravity="center_vertical"
+            android:minHeight="60dp" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/extras_layout"
+            android:layout_below="@+id/detailed_description"
+            android:layout_marginTop="5dp"
+            android:gravity="end">
+
+            <TextView
+                tools:text="AA000111222NZ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label"
+                android:textSize="13sp"
+                android:textColor="@android:color/white" />
+
+            <TextView
+                tools:text="NZ Post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/source"
+                android:layout_marginBottom="5dp"
+                android:textSize="13sp"
+                android:textColor="@android:color/white" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/bottom_shadow"
+        android:layout_below="@+id/info_layout" />
+
+    <ListView
+        tools:listitem="@layout/item_package_event"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/events_list"
+        android:dividerHeight="@null"
+        android:divider="@null"
+        android:clipToPadding="false"
+        android:layout_below="@+id/info_layout"
+        android:paddingTop="10dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:id="@+id/empty_events"
+        android:orientation="vertical"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/info_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/ic_nothing"
+            android:layout_marginBottom="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_events"
+            android:gravity="center_horizontal"
+            android:textSize="18sp"
+            android:layout_marginBottom="10dp"
+            android:focusableInTouchMode="true"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#aaa" />
+    </LinearLayout>
+
+</RelativeLayout>
