--- a/TrackNZApp/src/main/res/values-sw600dp-land/layouts.xml
+++ b/TrackNZApp/src/main/res/values-sw600dp-land/layouts.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="display_two_panes">false</bool>
+    <bool name="display_two_panes">true</bool>
 </resources>
