--- a/TrackNZApp/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/TrackNZApp/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="?attr/actionBarSize"
         layout="@layout/toolbar"
         android:id="@+id/inc_toolbar" />
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/inc_toolbar">
@@ -17,25 +17,36 @@
             android:layout_height="match_parent"
             android:name="co.svbnet.tracknz.fragment.PackageListFragment"
             android:id="@+id/list_fragment"
-            tools:layout="@layout/fragment_package_list" />
+            tools:layout="@layout/fragment_package_list"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true" />
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/info_fragment_container"
-            android:visibility="gone">
-            <fragment
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:name="co.svbnet.tracknz.fragment.PackageInfoFragment"
-                android:id="@+id/info_fragment"
-                tools:layout="@layout/fragment_package_info" />
-        </LinearLayout>
+            android:visibility="gone"
+            android:layout_toRightOf="@+id/list_fragment" />
+
         <View
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/unselected_view"
-            android:background="@color/selection" />
-    </LinearLayout>
+            android:background="@color/selection"
+            android:layout_toRightOf="@+id/list_fragment" />
+        <FrameLayout
+            android:id="@+id/top_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:foreground="@drawable/bottom_shadow"
+            android:layout_alignParentTop="true" />
+        <FrameLayout
+            android:id="@+id/sep_shadow"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:foreground="@drawable/left_shadow"
+            android:layout_toRightOf="@+id/list_fragment" />
+    </RelativeLayout>
 </RelativeLayout>
