--- a/TrackNZApp/src/main/res/layout/activity_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/activity_package_info.xml
@@ -14,11 +14,9 @@
         android:layout_alignParentTop="true"
         android:id="@+id/toolbar_layout" />
 
-    <fragment
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:name="co.svbnet.tracknz.fragment.PackageInfoFragment"
-        android:id="@+id/fragment"
-        android:layout_below="@+id/toolbar_layout" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/info_fragment_container" />
 
 </RelativeLayout>
