--- a/TrackNZApp/src/main/res/layout/fragment_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/fragment_package_info.xml
@@ -15,8 +15,7 @@
         android:paddingTop="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingBottom="20dp"
-        android:layout_below="@+id/toolbar_layout">
+        android:paddingBottom="20dp">
 
         <ImageView
             android:layout_width="60dp"
