--- a/TrackNZApp/src/main/res/layout/activity_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/activity_package_info.xml
@@ -17,6 +17,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/info_fragment_container" />
+        android:id="@+id/info_fragment_container"
+        android:layout_below="@+id/toolbar_layout" />
 
 </RelativeLayout>
