--- a/TrackNZApp/src/main/res/layout/fragment_package_list.xml
+++ b/TrackNZApp/src/main/res/layout/fragment_package_list.xml
@@ -41,10 +41,11 @@ swipe indicator refresh renders over it -->
         android:layout_height="match_parent"
         android:visibility="gone"
         android:id="@+id/packages_container">
+        <!--android:choiceMode="multipleChoiceModal"-->
         <ListView
             android:paddingTop="10dp"
             tools:visibility="invisible"
-            android:choiceMode="multipleChoiceModal"
+
             android:id="@+id/packages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
