--- a/TrackNZApp/src/main/res/values/colors.xml
+++ b/TrackNZApp/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="primary_dark">#D32F2F</color>
     <color name="accent">#448AFF</color>
     <color name="text">#333</color>
-    <color name="selection">#e0e0e0</color>
+    <color name="selection">#eee</color>
     <color name="window_background">#ffffff</color>
 
     <color name="tracking_status_indeterminate">#2196F3</color>
