--- a/TrackNZApp/src/main/res/layout/fragment_package_info.xml
+++ b/TrackNZApp/src/main/res/layout/fragment_package_info.xml
@@ -1,9 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="co.svbnet.tracknz.activity.PackageInfoActivity"
+    android:background="@color/window_background"
     android:orientation="vertical">
 
     <RelativeLayout
