--- a/TrackNZApp/src/main/res/values/styles.xml
+++ b/TrackNZApp/src/main/res/values/styles.xml
@@ -14,6 +14,11 @@
         <item name="android:activatedBackgroundIndicator">@drawable/tracked_package_background</item>
     </style>
 
+    <style name="menu_labels_style">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:textStyle">bold</item>
+    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
