Implement event info dialog

--- a/TrackNZApp/src/main/res/values/dimens.xml
+++ b/TrackNZApp/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="min_description_width">225dp</dimen>
+    <!-- core/res/res/values/dimens_material.xml -->
+    <dimen name="dialog_padding_material">24dp</dimen>
+    <dimen name="dialog_padding_top_material">18dp</dimen>
 </resources>
